--- a/app/src/main/res/layout/activity_calculo_ipva.xml
+++ b/app/src/main/res/layout/activity_calculo_ipva.xml
@@ -66,11 +66,12 @@
 
     <Spinner
         android:id="@+id/spinner"
+        style="@style/Widget.AppCompat.Spinner.DropDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:background="@color/white"
-        android:dropDownSelector="@color/black"
+        android:dropDownSelector="@color/white"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -82,7 +83,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:background="?attr/actionModeSplitBackground"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="Calcular IPVA"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
